--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "prettier": {
     "tabWidth": 2,
@@ -26,7 +27,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "postcss-media-variables": "^2.0.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1"
   }
 }
