--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "postcss-media-variables": "^2.0.1",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.1"
