--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "semi": false,
     "printWidth": 120
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
+  },
   "dependencies": {
     "@types/node": "20.2.6",
     "@types/react": "18.2.9",
@@ -33,6 +38,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
+    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "postcss-media-variables": "^2.0.1",
