--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest-environment-jsdom": "^29.6.1",
     "postcss-media-variables": "^2.0.1",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "husky": "^8.0.0"
   }
 }
