--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
-    "husky": "^8.0.3",
+    "@types/supertest": "^2.0.14",
+    "husky": "^8.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "postcss-media-variables": "^2.0.1",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.1",
-    "husky": "^8.0.0"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
