--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "canvas-confetti": "^1.9.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "mongodb": "^5.6.0",
@@ -37,6 +38,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/canvas-confetti": "^1.6.1",
     "@types/jest": "^29.5.3",
     "@types/supertest": "^2.0.14",
     "husky": "^8.0.0",
