--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev:local": "NODE_ENV=development next dev",
+    "dev:test": "NODE_ENV=test next dev",
     "build": "next build",
     "lint": "next lint",
     "test": "jest",
+    "cypress:open": "cypress open",
     "countHours": "node utils/countHours.js"
   },
   "prettier": {
@@ -42,6 +44,7 @@
     "@types/canvas-confetti": "^1.6.1",
     "@types/jest": "^29.5.3",
     "@types/supertest": "^2.0.14",
+    "cypress": "^13.3.1",
     "husky": "^8.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
