--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.9.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "mongodb": "^5.6.0",
