Experiment with github action for local MongoDB + e2e tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev:local": "NODE_ENV=development next dev",
     "dev:test": "NODE_ENV=test next dev",
     "build": "next build",
+    "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "cypress:open": "cypress open",
