--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,7 +3,7 @@ name: Run tests
 on: [push]
 
 jobs:
-  build:
+  e2e:
     runs-on: ubuntu-20.04
     environment: local
     strategy:
@@ -35,7 +35,8 @@ jobs:
       uses: cypress-io/github-action@v6
       with:
         browser: chrome
-        start: npm run dev:local
+        build: npm run build
+        start: npm start
         wait-on: 'http://localhost:3000'
         env: true
       env:
