Add lint to pre-commit hook

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev:test": "NODE_ENV=test next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --max-warnings=0",
     "test": "jest",
+    "precommit": "npm run lint && npm test",
     "cypress:open": "cypress open",
     "countHours": "node utils/countHours.js",
     "db:local:seed": "bash cypress/utils/seed_db.sh",
