Use Jest matchers in component tests to avoid type errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
     "release/types/**/*.ts",
     "utils/countHours.js"
   ],
-  "exclude": ["node_modules", "./cypress.config.ts"],
-  "types": ["cypress"]
+  "exclude": ["node_modules", "./cypress.config.ts", "cypress"],
+  "types": ["node", "jest"]
 }
