--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-config-next": "13.4.4",
     "js-confetti": "^0.12.0",
     "mongodb": "^5.6.0",
-    "next": "13.4.4",
+    "next": "^13.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
