--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "dependencies": {
-    "@types/node": "20.2.6",
+    "@types/node": "22.0.0",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
@@ -35,7 +35,7 @@
     "eslint-config-next": "13.4.4",
     "js-confetti": "^0.12.0",
     "mongodb": "^5.6.0",
-    "next": "^13.5.0",
+    "next": "13.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
