--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -9,11 +9,11 @@ on:
 
 jobs:
   e2e:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment: local
     strategy:
       matrix:
-        node-version: [22.x]
+        node-version: [2.x]
         mongodb-version: ['7.0']
 
     steps:
