--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -51,7 +51,7 @@ jobs:
         CRON_SECRET: ${{ secrets.CRON_SECRET }}
 
   Deploy-Production:
-    needs: e2e
+    # needs: e2e
     runs-on: ubuntu-latest
     environment: production
     steps:
